docs: improve example again with more exotic features
Source: https://docs.fluentd.org/v0.12/articles/config-file

--- a/example.fluent.conf
+++ b/example.fluent.conf
@@ -4,17 +4,23 @@
 <source>
   @type forward
   port 24224
-  str_param "foo  # This line is converted to "foo\nbar". NL is kept in the parameter
+  str1a_param "foo"
+  str1b_param "foo
   bar"
+  str2a_param 'foo'
+  str2b_param 'foo
+  bar'
+  str2c_param "foo\nbar" # \n is interpreted as actual LF character
   array_param [
     "a", "b"
   ]
   hash_param {
-    "k":"v",
-    "k1":10
+    "k": "v",
+    "k1": 10
   }
   host_param "#{Socket.gethostname}" # host_param is actual hostname like `webserver1`.
   env_param "foo-#{ENV["FOO_BAR"]}" # NOTE that foo-"#{ENV["FOO_BAR"]}" doesn't work.
+  tag "test.#{ENV['PROJECT_NAME']}"
 </source>
 
 <source>
@@ -28,14 +34,16 @@
   port 9880
 </source>
 
-<filter myapp.access>
+<filter foo.bar>
   @type record_transformer
   <record>
-    host_param "#{Socket.gethostname}"
+    hostname "#{Socket.gethostname}"
+    tag ${record["project_name"]}.scope.${tag}_old
+    key.flatten x
   </record>
 </filter>
 
-<match myapp.access>
+<match myapp.access yourapp.access>
   @type file
   path /var/log/fluent/access
 </match>
@@ -47,6 +55,10 @@
   </filter>
   <match **>
     @type s3
+    include_tag_key true
+    buffer_chunk_limit 2M
+    buffer_queue_limit 32
+    flush_interval 5s
     # ...
   </match>
 </label>
@@ -61,3 +73,43 @@
 
 # Include config files in the ./config.d directory
 @include config.d/*.conf
+
+# =======================
+# v1_literal_example.conf
+# =======================
+<section1>
+  key1  'text'     # text
+  key2  '\''       # ' (1 char)
+  key3  '\\'       # \ (1 char)
+  key4  '\t'       # \t (2 char)
+  key5  '\['       # \[ (2 char)
+  key6  '\\['      # \[ (2 char)
+  key7  '#t'       # #t (2 char)
+  key8  '\#{test}' # \#{test} (8 char)
+  key9  '#{test}'  # #{test} (7 char)
+  key10 '\[(?<time>[^\]]*)\] (?<message>.*)'    # \[(?<time>[^\]]*\] (?<message>.*)
+</section1>
+<section2>
+  key1  "text"     # text
+  key2  "\""       # " (1 char)
+  key3  "\\"       # \ (1 char)
+  key4  "\t"       # TAB (1 char)
+  key5  "\["       # [ (1 char)
+  key6  "\\["      # \[ (2 char)
+  key7  "#t"       # #t (2 char)
+  key8  "\#{test}" # #{test} (7 char)
+  key9  "#{test}"  # replaced by eval('test')
+  key10 "\\[(?<time>[^\\]]*)\\] (?<message>.*)" # \[(?<time>[^\]]*\] (?<message>.*)
+</section2>
+<section3>
+  key1  text     # text
+  key2  \        # \ (1 char)
+  key3  \\       # \\ (2 char)
+  key4  \t       # \t (2 char)
+  key5  \[       # \[ (2 char)
+  key6  \\[      # \\[ (3 char)
+  key7  #t       # #t (2 char)
+  key8  \#{test} # \#{test} (8 char)
+  key9  #{test}  # #{test} (7 char)
+  key10 \[(?<time>[^\]]*)\] (?<message>.*)    # \[(?<time>[^\]]*\] (?<message>.*)
+</section3>
